<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <packaging>pom</packaging>

    <groupId>com.github.guang19</groupId>
    <artifactId>service</artifactId>
    <version>1.0.3</version>

    <name>service</name>
    <description>common service tools and common develop tools</description>

    <modules>
        <module>cloud-storage-service</module>
        <module>short-message-service</module>
        <module>service-common</module>
        <module>cos-spring-boot-starter</module>
        <module>sms-spring-boot-starter</module>
    </modules>

    <url>https://github.com/guang19/service</url>

    <!--licenses-->
    <licenses>
        <license>
            <name>The Apache Software License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>

    <!--developers-->
    <developers>
        <developer>
            <name>yangguang</name>
            <email>2196927727@qq.com</email>
        </developer>
    </developers>

    <!--发布的仓库地址-->
    <distributionManagement>
        <snapshotRepository>
            <id>oss</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
        </snapshotRepository>
        <repository>
            <id>oss</id>
            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
        </repository>
    </distributionManagement>

    <!--scm-->
    <scm>
        <url>https://github.com/guang19/service.git</url>
        <connection>scm:https://github.com/guang19/service.git</connection>
        <developerConnection>https://github.com/guang19/service.git</developerConnection>
    </scm>

    <properties>
        <java.version>1.8</java.version>
        <!--项目的子模块版本-->
        <service-common.version>1.0.3</service-common.version>
        <cos.version>1.0.3</cos.version>
        <cos-with-springboot.version>1.0.3</cos-with-springboot.version>
        <sms.version>1.0.3</sms.version>
        <sms-with-springboot.version>1.0.3</sms-with-springboot.version>

        <!--插件依赖-->
        <maven-compiler.version>3.1</maven-compiler.version>
        <maven-source.version>3.2.1</maven-source.version>
        <maven-javadoc.version>3.0.1</maven-javadoc.version>
        <maven-gpg.version>1.6</maven-gpg.version>

        <!--sdk依赖-->
        <tencent-cos.version>5.6.14</tencent-cos.version>
<!--        <tencent-sms.version>1.0.6</tencent-sms.version>-->
        <aliyun-oss.version>3.8.0</aliyun-oss.version>
        <aliyun-core.version>4.5.0</aliyun-core.version>
        <boot.version>2.2.4.RELEASE</boot.version>

        <!--第三方依赖-->
        <javax-xml-bind.version>2.3.1</javax-xml-bind.version>
        <dom4j.version>1.6.1</dom4j.version>
        <lombok.version>1.18.10</lombok.version>
        <common-loggin.version>1.2</common-loggin.version>
        <junit.version>4.13</junit.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!--cloud object storage service-->
            <dependency>
                <groupId>com.github.guang19</groupId>
                <artifactId>cloud-storage-service</artifactId>
                <version>${cos.version}</version>
            </dependency>
            <!--cos with spring boot-->
            <dependency>
                <groupId>com.github.guang19</groupId>
                <artifactId>cos-spring-boot-starter</artifactId>
                <version>${cos-with-springboot.version}</version>
            </dependency>

            <!--short message service-->
            <dependency>
                <groupId>com.github.guang19</groupId>
                <artifactId>short-message-service</artifactId>
                <version>${sms.version}</version>
            </dependency>
            <!--sms with spring boot-->
            <dependency>
                <groupId>com.github.guang19</groupId>
                <artifactId>sms-spring-boot-starter</artifactId>
                <version>${sms-with-springboot.version}</version>
            </dependency>

            <!--service common-->
            <dependency>
                <groupId>com.github.guang19</groupId>
                <artifactId>service-common</artifactId>
                <version>${service-common.version}</version>
            </dependency>

            <!--tencent cloud cos sdk-->
            <dependency>
                <groupId>com.qcloud</groupId>
                <artifactId>cos_api</artifactId>
                <version>${tencent-cos.version}</version>
            </dependency>

            <!--tencen cloud short message sdk 等腾讯云什么时候允许发送单条信息,而不是选择捆绑套餐包的时候我再写腾讯云的短信服务,否则我调试都调试不了.-->
<!--            <dependency>-->
<!--                <groupId>com.github.qcloudsms</groupId>-->
<!--                <artifactId>qcloudsms</artifactId>-->
<!--                <version>${tencent-sms.version}</version>-->
<!--            </dependency>-->

            <!--aliyun oss sdk-->
            <dependency>
                <groupId>com.aliyun.oss</groupId>
                <artifactId>aliyun-sdk-oss</artifactId>
                <version>${aliyun-oss.version}</version>
            </dependency>

            <!--aliyun core sdk-->
            <dependency>
                <groupId>com.aliyun</groupId>
                <artifactId>aliyun-java-sdk-core</artifactId>
                <version>${aliyun-core.version}</version>
            </dependency>

            <!--spring boot auto configuration-->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-autoconfigure</artifactId>
                <version>${boot.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-configuration-processor</artifactId>
                <version>${boot.version}</version>
            </dependency>

            <!--apache common logging-->
            <dependency>
                <groupId>commons-logging</groupId>
                <artifactId>commons-logging</artifactId>
                <version>${common-loggin.version}</version>
            </dependency>

            <!--java ee xml,我的jdk为11版本,在jdk9,java就已经模块化,把javaee的包移除了，而阿里云oss sdk需要此包,所以需要引入-->
            <dependency>
                <groupId>javax.xml.bind</groupId>
                <artifactId>jaxb-api</artifactId>
                <version>${javax-xml-bind.version}</version>
            </dependency>

            <!--dom4j-->
            <dependency>
                <groupId>dom4j</groupId>
                <artifactId>dom4j</artifactId>
                <version>${dom4j.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <!--全局依赖-->
    <dependencies>
        <!--lombok-->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <scope>provided</scope>
            <version>${lombok.version}</version>
        </dependency>

        <!--junit4-->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <!--compiler-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler.version}</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>
        </plugins>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <excludes>
                    <exclude>*.properties</exclude>
                </excludes>
            </resource>
        </resources>
    </build>

    <profiles>
        <profile>
            <id>release</id>
            <build>
                <resources>
                    <resource>
                        <directory>src/main/resources</directory>
                        <excludes>
                            <exclude>*.properties</exclude>
                        </excludes>
                    </resource>
                </resources>
                <plugins>
                    <!--compiler-->
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-compiler-plugin</artifactId>
                        <version>${maven-compiler.version}</version>
                        <configuration>
                            <source>${java.version}</source>
                            <target>${java.version}</target>
                        </configuration>
                    </plugin>

                    <!--maven source-->
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-source-plugin</artifactId>
                        <version>${maven-source.version}</version>
                        <executions>
                            <execution>
                                <phase>package</phase>
                                <goals>
                                    <goal>jar-no-fork</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>

                    <!--java doc-->
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <version>${maven-javadoc.version}</version>
                        <configuration>
                            <failOnError>false</failOnError>
                            <doclint>none</doclint>
                        </configuration>
                        <executions>
                            <execution>
                                <phase>package</phase>
                                <goals>
                                    <goal>jar</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>

                    <!--gpg-->
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>${maven-gpg.version}</version>
                        <executions>
                            <execution>
                                <id>oss</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

</project>
